# test2

pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/app/: __init__.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/docs/: 01-Documentação de Contexto.md  02-Especificação do Projeto.md  05-Arquitetura da Solução.md  11-Registro de Contribuição.md  13-Referências.md
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/: App.jsx  main.jsx
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/: main.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/buymove_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/core/: config.py  database.py  security.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/dependencies/: auth.py  database.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/models/: favorite.py  user.py  vehicle.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/routers/: __init__.py  auth.py  favorites.py  users.py  vehicles.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/services/: __init__.py  favorite_service.py  user_service.py  vehicle_service.py
pmv-ads-2025-2-e4-proj-infra-t3-buymove-main/src/backend/app/utils/: object_id.py
(+28 files in other folders)
